--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APMSERVER_PORT=8200
 # Username & Password for Admin Elasticsearch cluster.
 # This is used to set the password at setup, and used by others to connect to Elasticsearch at runtime.
 # USERNAME cannot be changed! It is set here for parmeterization only.
-ELASTIC_USERNAME=elastic
-ELASTIC_PASSWORD=changeme
+ELASTIC_USERNAME=admin
+ELASTIC_PASSWORD=SecretPassword1337
 AWS_ACCESS_KEY_ID=nottherealid
 AWS_SECRET_ACCESS_KEY=notherealsecret
 ELASTIC_APM_SECRET_TOKEN=secrettokengoeshere
