--- a/logstash/config/pipelines.yml
+++ b/logstash/config/pipelines.yml
@@ -4,6 +4,10 @@
   path.config: "/usr/share/logstash/pipeline/main.conf"
   queue.type: memory
 
+- pipeline.id: accesslogpipe
+  path.config: "/usr/share/logstash/pipeline/custom-pipe.conf"
+  queue.type: memory
+  
 #- pipeline.id: second_pipeline
 #  path.config: "/usr/share/logstash/pipeline/second.conf"
 #  queue.type: persisted
