--- a/logstash/pipeline/custom-pipe.conf
+++ b/logstash/pipeline/custom-pipe.conf
@@ -1,13 +1,20 @@
 input {
-      file {
-        path => "/var/log/access.log"
-      }
+
+        beats {
+        port => "5045"
+}
+
+
+
     }
     filter {
       grok {
-        match => { "message" => "%{IP:client} %{WORD:method} %{URIPATHPARAM:request} %{NUMBER:bytes} %{NUMBER:duration}" }
-      }
+        match => {"message" => "%{COMBINEDAPACHELOG}"}
+
+}
+
     }
+
 output {
     elasticsearch {
         hosts => "${ELASTICSEARCH_HOST_PORT}"
